--- a/_posts/2016-04-26-Webx初学者教程.md
+++ b/_posts/2016-04-26-Webx初学者教程.md
@@ -3,9 +3,10 @@ layout:     post
 title:      Webx初学者教程
 subtitle:   Webx Beginner Guide
 date:       2016-04-26
-author:     blindpirate 
+author:     Bo 
 catalog: true
 tags:
+    - 中文
     - 技术
     - Webx
     - 教程
