--- a/_posts/2016-04-26-Webx初学者教程.md
+++ b/_posts/2016-04-26-Webx初学者教程.md
@@ -14,7 +14,7 @@ tags:
 
 # 写在两年之后
 
-这份文档是2016年春天我在离开阿里之前写的，当时我每周要花6个小时坐大巴往来杭州和上海，在车上无聊之余写了本文。它只包含一些入门级的分析，在离开阿里之后的工作中再也没有接触过Webx，因此也没有后续，也不再更新了。愿此文对你有帮助，以尽我绵薄之力。
+这份文档是2016年春天我在离开阿里之前写的，当时我每周要花6个小时坐大巴往来杭州和上海，在车上无聊之余写了本文。它只包含一些入门级的分析，在离开阿里之后的工作中再也没有接触过Webx，因此没有后续，也不再更新了。愿此文对你有帮助，以尽我绵薄之力。
 
 # 0.为什么要写这份文档
 那么我们就开始了。
