Finish translation of Gradle Enterprise tutorial 1

--- a/_posts/2018-03-25-Kotlin初体验.md
+++ b/_posts/2018-03-25-Kotlin初体验.md
@@ -125,4 +125,6 @@ Java > Groovy > Kotlin
 
 在[JUnit 5 Unroll Extension for Kotlin](https://github.com/blindpirate/junit5-unroll-extension)的开发过程中，我尝试完全用Kotlin DSL配置Gradle，磕磕绊绊总算是成功了，期间请教了隔壁组的[Paul](https://github.com/eskatos)好多问题。用Kotlin写Gradle DSL最大的问题其实不在于它的强类型，而在于……几乎所有的第三方插件给出的demo都是Groovy的格式，需要人肉翻译成Kotlin，有的甚至要去翻插件的源代码……
 
+不过有一点可以确定，虽然kotlin DSL还没到`1.0`版本，但是生产上使用已经没啥问题了，Gradle项目的构建配置`*.gradle`已经全面转向了`*.gradle.kts`。
+
 有关Groovy和Kotlin配置Gradle构建的事情，下次专门开一篇帖子讲吧。
